--- a/anticipate.css
+++ b/anticipate.css
@@ -23,41 +23,64 @@
 
 body{
   font-family: "Inter", sans-serif;
+  color: var(--text-body);
+  background-color: var(--bg-light);
 }
 
 header{
-  border-bottom: 1px solid black;
   display: flex;
   align-items: center;
   justify-content: space-between;
   height: 80px;
   width: 100vw;
   padding: 10px 40px;
+  background-color: var(--primary);
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 100;
+}
+.header-name{
+  display: flex;
+  align-items: center;
 }
 h1{
-  padding: 10px;
+  /* make this reponsive later */
+  padding: 2px;
   margin-left: 200px;
+  font-family: "Poppins", sans-serif;
+  font-size: 3rem;
+  font-weight: 700;
+  color: var(--bg-light);
 }
+
 .CTA{
   font-size: 1rem;
+  font-weight: 600;
   width: 15rem;
   height: 45px;
   border-radius: 8px;
   padding: 5px 10px;
   margin-right: 100px;
-  /* work on hth border color */
-  border: 1px solid var(--primary-accent);
+  border: 1px solid white;
   background-color: white;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+  flex-shrink: 0;
+  flex-wrap: wrap;
+  text-decoration: none;
 }
 .CTA:hover{
   background-color: var(--primary-accent);
   cursor: pointer;
   color: white;
+  border: 1px solid var(--primary-accent); 
 }
 
 .about{
+  border: 1px solid black;
   margin-top: 50px;
+  padding-top: 80px;
   padding: 40px;
   height: 400px;
   display: grid;
@@ -77,20 +100,17 @@ h1{
   border: 1px solid black;
 }
 
-.register{
-  border: 1px solid plum;
-}
 form{
   margin: 30px 30px;
   padding: 50px;
   border-width: medium;
-  border: 1px solid black;
 }
 .form-header{
   font-family: "Poppins", sans-serif;
   font-size: 3rem;
   font-weight: 700;
   text-align: center;
+  color: var(--text-heading);
 }
 .form-description{
   padding: 5px;
@@ -100,7 +120,7 @@ form{
 }
 
 .bio{
-  padding: 10px;
+  padding: 5px 10px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -111,9 +131,9 @@ form{
   font-size: 1.1rem;
 }
 .input{
-  border: 1px solid black;
+  border: 1px solid var(--border-light);
   padding: 8px;
-  width: 232px;
+  width: 100%;
   height: 48px;
   font-size: 1rem;
   margin-top: 5px;
@@ -122,15 +142,15 @@ form{
 .first-name, .surname,
 .email, .mobile{
   margin: 0 10px;
-  padding: 10px;
-  border: 1px solid black;
+  padding: 5px 10px;
+
 }
 
-.contact{
+.form-contact{
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 10px;
+  padding: 5px 10px;
 }
 
 .submit{
@@ -142,9 +162,10 @@ form{
 .submit-button{
   width: 31.5rem;
   border-radius: 8px;
-  height: 40px;
+  height: 45px;
   font-size: 1rem;
-  border: 1px solid var(--primary--accent);
+  font-weight: 600;
+  border: 1px solid white;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
   background-color: white;
 }
@@ -152,5 +173,26 @@ form{
   cursor: pointer;
   background-color: var(--primary-accent);
   color: white;
+  border: 1px solid var(--primary-accent); 
 }
-
+.footer{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
+}
+.footer-heading{
+  color: var(--text-heading);
+  text-align: center;
+  font-weight: 400;
+  font-family: "poppins", sans-serif;
+  padding: 5px;
+}
+.footer-description{
+  color: var(--text-body);
+  margin: 0;
+  text-align: center;
+  font-size: 1rem;
+  font-weight: 300;
+  padding: 5px;
+}
