--- a/anticipate.css
+++ b/anticipate.css
@@ -19,6 +19,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+
 }
 
 body{
@@ -28,7 +29,7 @@ body{
   padding-top: 30px;
 }
 
-header{
+.header{
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -42,18 +43,19 @@ header{
   right: 0;
   z-index: 100;
 }
-.header-name{
-  display: flex;
-  align-items: center;
-}
+
 h1{
   /* make this reponsive later */
   padding: 2px;
-  margin-left: 200px;
+ 
+  width: -10%;
   font-family: "Poppins", sans-serif;
   font-size: 3rem;
-  font-weight: 700;
+  font-weight: 600;
   color: var(--bg-light);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .CTA{
@@ -83,7 +85,6 @@ h1{
   margin-bottom: 20px;
   padding-top: 80px;
   padding: 40px;
-  height: 400px;
 }
 .ducora-slogan{
   font-family: "Poppins", sans-serif;
@@ -122,7 +123,7 @@ h1{
 
 form{
   margin: 30px 30px;
-  padding: 50px;
+  padding: 30px;
 }
 .form-header{
   font-family: "Poppins", sans-serif;
@@ -143,6 +144,7 @@ form{
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-wrap: wrap;
 }
 .label{
   padding: 0 5px;
@@ -153,6 +155,7 @@ form{
   border: 1px solid;
   padding: 8px;
   width: 100%;
+  max-width: 100%;
   height: 48px;
   font-size: 1rem;
   margin-top: 5px;
@@ -169,6 +172,7 @@ form{
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-wrap: wrap;
   padding: 5px 10px;
 }
 
@@ -214,4 +218,20 @@ form{
   font-size: 1rem;
   font-weight: 300;
   padding: 5px;
+}
+
+@media(max-width: 768px){
+  h1{
+    font-size: 2rem;
+  }
+
+  p{
+    font-size: 1rem;
+    max-width: 100%;
+    padding: 0 1rem;
+  }
+
+  .submit-button{
+    max-width: 100%;
+  }
 }
