--- a/anticipate.css
+++ b/anticipate.css
@@ -221,8 +221,13 @@ form{
 }
 
 @media(max-width: 768px){
+  *{
+    margin: 0;
+    padding: 0;
+  }
   h1{
-    font-size: 2rem;
+    font-size: 1rem;
+    font-weight: 400;
   }
 
   p{
