--- a/anticipate.css
+++ b/anticipate.css
@@ -45,9 +45,7 @@ body{
 }
 
 h1{
-  /* make this reponsive later */
   padding: 2px;
- 
   width: -10%;
   font-family: "Poppins", sans-serif;
   font-size: 3rem;
@@ -95,7 +93,8 @@ h1{
   padding: 5px auto;
   font-weight: 800;
   text-align: center;
-  
+  display: flex;
+  flex-wrap: wrap;
 }
 .ducora-mission{
   padding: 5px;
