--- a/anticipate.css
+++ b/anticipate.css
@@ -223,7 +223,7 @@ form{
 
 @media(max-width: 481px){
   header{
-    max-width: 100%;
+    max-width: 100vw;
   }
 
   h1{
@@ -231,19 +231,19 @@ form{
   }
 
   .CTA{
-    max-width: 100%;
+    max-width: 100vw;
   }
 
   .ducora-slogan{
     font-size: 1rem;
-    max-width: 100%;
+    max-width: 100vw;
     display: flex;
     flex-wrap: wrap;
   }
 
   p{
     font-size: 1rem;
-    max-width: 100%;
+    max-width: 100vw;
   }
 
   input{
