--- a/anticipate.css
+++ b/anticipate.css
@@ -140,7 +140,6 @@ form{
 }
 
 .bio{
-  background-color: lightslategray;
   padding: 5px 10px;
   display: flex;
   align-items: center;
@@ -235,7 +234,7 @@ form{
   }
 
   .ducora-slogan{
-    font-size: 1rem;
+    font-size: 4.5rem;
     max-width: 100vw;
     display: flex;
     flex-wrap: wrap;
@@ -244,13 +243,15 @@ form{
   p{
     font-size: 1rem;
     max-width: 100vw;
+    display: flex;
+    flex-wrap: wrap;
   }
 
   input{
-    max-width: 100%;
+    max-width: 100vw;
   }
 
   .submit-button{
-    max-width: 100%;
+    max-width: 100vw;
   }
 }
