--- a/anticipate.css
+++ b/anticipate.css
@@ -231,10 +231,23 @@ form{
     max-width: 50vw;
   }
 
+  .column-1{
+    padding: 10px;
+  }
+  .column-2{
+    padding: 10px;
+  }
+
   .ducora-slogan{
     font-size: 2.5rem;
-    line-height: 0.5;
+    line-height: 1.5;
     max-width: 100vw;
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .ducora-mission{
+    font-size: 1rem;
     display: flex;
     flex-wrap: wrap;
   }
