--- a/anticipate.css
+++ b/anticipate.css
@@ -240,7 +240,7 @@ form{
 
   .ducora-slogan{
     font-size: 2.5rem;
-    line-height: 1.5;
+    line-height: 10px;
     max-width: 100vw;
     display: flex;
     flex-wrap: wrap;
@@ -250,6 +250,7 @@ form{
     font-size: 1rem;
     display: flex;
     flex-wrap: wrap;
+    line-height: 10px;
   }
 
   p{
