--- a/anticipate.css
+++ b/anticipate.css
@@ -19,14 +19,14 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  border: 1px solid brown;
+  border: 2px solid lightsteelblue;
 }
 
 body{
   font-family: "Inter", sans-serif;
   color: var(--text-body);
   background-color: var(--bg-light);
-  padding-top: 30px;
+  width: 100%;
 }
 
 .header{
@@ -34,21 +34,21 @@ body{
   align-items: center;
   justify-content: space-between;
   height: 80px;
-  width: 100vw;
-  padding: 10px 40px;
+  width: 100%;
+  padding: 10px;
   background-color: var(--primary);
-  position: fixed;
+  /*position: fixed;
   top: 0;
   left: 0;
   right: 0;
-  z-index: 100;
+  z-index: 100;*/
 }
 
 h1{
   padding: 2px;
-  width: -10%;
+  width: 30%;
   font-family: "Poppins", sans-serif;
-  font-size: 3rem;
+  font-size: 2rem;
   font-weight: 600;
   color: var(--bg-light);
   display: flex;
@@ -59,11 +59,10 @@ h1{
 .CTA{
   font-size: 1rem;
   font-weight: 600;
-  width: 15rem;
+  width: 100%;
   height: 45px;
   border-radius: 8px;
   padding: 5px 10px;
-  margin-right: 100px;
   border: 1px solid white;
   background-color: white;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
@@ -78,29 +77,24 @@ h1{
   border: 1px solid var(--primary-accent); 
 }
 
-.about{
-  margin-top: 50px;
-  margin-bottom: 20px;
-  padding-top: 80px;
-  padding: 20px;
-}
 .ducora-slogan{
   font-family: "Poppins", sans-serif;
-  font-size: 4.5rem;
+  font-size: 2rem;
+  text-align: center;
   background-image: linear-gradient(45deg, var(--text-heading), var(--text-body), var(--primary)10%, var(--text-heading));
   background-clip: text;
   -webkit-text-fill-color: transparent;
   padding: 5px auto;
   font-weight: 800;
-  text-align: center;
   display: flex;
-  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 }
 .ducora-mission{
-  padding: 5px;
   font-family: "Inter", sans-serif;
   font-size: 1.8rem;
-  line-height: 40px;
+  padding: 5px auto;
+  text-align: center;
   color: var(--text-body);
   text-align: center;
 }
@@ -111,7 +105,6 @@ h1{
   align-items: center;
 }
 .column-2{
-  margin-bottom: 30px;
   padding: 20px;
   display: flex;
   align-items: center;  
@@ -122,12 +115,12 @@ h1{
 }
 
 form{
-  margin: 30px 30px;
-  padding: 15px;
+  margin-top: 30px;
+  /* padding: 15px; */
 }
 .form-header{
   font-family: "Poppins", sans-serif;
-  font-size: 3rem;
+  font-size: 2rem;
   font-weight: 700;
   text-align: center;
   color: var(--text-heading);
@@ -139,11 +132,12 @@ form{
   text-align: center;
 }
 
-.bio{
-  padding: 5px 10px;
+.bio,
+.form-contact{
+  width: 100%;
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
   flex-wrap: wrap;
 }
 .label{
@@ -154,24 +148,17 @@ form{
 .input{
   border: 1px solid;
   padding: 8px;
-  width: 15.75rem;
+  width: 100%;
   height: 48px;
   font-size: 1rem;
   margin-top: 5px;
   border-radius: 8px;
+
 }
 .first-name, .surname,
 .email, .mobile{
   margin: 0 5px;
   padding: 5px 0;
-}
-
-.form-contact{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  padding: 5px 10px;
 }
 
 .submit{
@@ -181,7 +168,7 @@ form{
 }
 
 .submit-button{
-  width: 32rem;
+  width: 70%;
   border-radius: 8px;
   height: 45px;
   font-size: 1rem;
@@ -218,51 +205,4 @@ form{
   padding: 5px;
 }
 
-@media(max-width: 481px){
-  *{
-    padding: 0;
-  }
-
-  header{
-    max-width: 100vw;
-  }
-
-  h1{
-    font-size: 1.5rem;
-  }
-
-  .CTA{
-    max-width: 50vw;
-  }
-
-  .ducora-slogan{
-    font-size: 2.5rem;
-    line-height: 50px;
-    max-width: 100vw;
-    display: flex;
-    flex-wrap: wrap;
-  }
-
-  .ducora-mission{
-    font-size: 1rem;
-    display: flex;
-    flex-wrap: wrap;
-    line-height: 50px;
-  }
-
-  p{
-    font-size: 0.875rem;
-    max-width: 100vw;
-    display: flex;
-    flex-wrap: wrap;
-  }
-
-  input{
-    width: 31.5rem;
-    max-width: 100vw;
-  }
-
-  .submit-button{
-    max-width: 100vw;
-  }
-}
+/* make the input field a bit longer for mobile so that it fits the screen properly. Now it is someway because of the flexbox putting it in a row format */
