--- a/anticipate.css
+++ b/anticipate.css
@@ -19,7 +19,6 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  border: 2px solid lightsteelblue;
 }
 
 body{
@@ -27,12 +26,15 @@ body{
   color: var(--text-body);
   background-color: var(--bg-light);
   width: 100%;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 .header{
   display: flex;
   align-items: center;
   justify-content: space-between;
+  flex-wrap: wrap;
   height: 80px;
   width: 100%;
   padding: 10px;
@@ -59,7 +61,7 @@ h1{
 .CTA{
   font-size: 1rem;
   font-weight: 600;
-  width: 100%;
+  max-width: 100%;
   height: 45px;
   border-radius: 8px;
   padding: 5px 10px;
@@ -117,6 +119,9 @@ h1{
 form{
   margin-top: 30px;
   /* padding: 15px; */
+  /*display: flex;
+  flex-direction: column;
+  align-items: center;*/
 }
 .form-header{
   font-family: "Poppins", sans-serif;
@@ -135,25 +140,30 @@ form{
 .bio,
 .form-contact{
   width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
 }
 .label{
   padding: 0 5px;
   margin-bottom: 10px;
   font-size: 1.1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .input{
   border: 1px solid;
   padding: 8px;
-  width: 100%;
+  width: 90%;
   height: 48px;
   font-size: 1rem;
-  margin-top: 5px;
+  margin-top: 5px auto 0;
   border-radius: 8px;
-
+}
+.input-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .first-name, .surname,
 .email, .mobile{
@@ -164,11 +174,12 @@ form{
 .submit{
   display: flex;
   justify-content: center;
-  margin: 10px 0;
+  margin: 10px 5px;
 }
 
 .submit-button{
-  width: 70%;
+  width: 90%;
+  margin: 0 5px;
   border-radius: 8px;
   height: 45px;
   font-size: 1rem;
