--- a/anticipate.css
+++ b/anticipate.css
@@ -80,6 +80,7 @@ h1{
 }
 
 .ducora-slogan{
+  border: 1px solid brown;
   font-family: "Poppins", sans-serif;
   font-size: 2rem;
   text-align: center;
@@ -88,9 +89,6 @@ h1{
   -webkit-text-fill-color: transparent;
   padding: 5px auto;
   font-weight: 800;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 .ducora-mission{
   font-family: "Inter", sans-serif;
@@ -145,10 +143,12 @@ form{
   padding: 0 5px;
   margin-bottom: 10px;
   font-size: 1.1rem;
+  /*position: relative;
+  left: 20px;*/
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
 }
 .input{
   border: 1px solid;
@@ -216,4 +216,59 @@ form{
   padding: 5px;
 }
 
-/* make the input field a bit longer for mobile so that it fits the screen properly. Now it is someway because of the flexbox putting it in a row format */
+@media screen and (min-width: 475px){
+  .ducora-slogan{
+    font-size: 3rem;
+  }
+}
+
+@media screen and (min-width: 768px){
+  h1{
+    font-size: 2.5rem;
+  }
+
+  .ducora-slogan{
+    font-size: 4.5rem;
+    text-align: center;
+  }
+
+  .ducora-mission{
+    font-size: 2rem;
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+
+@media screen and (min-width: 1024px){
+  .ducora-slogan{
+    font-size: 4.5rem;
+  }
+}
+
+@media screen and (min-width: 1280px){
+  .ducora-slogan{
+    font-size: 4.5rem;
+  }
+}
+
+@media screen and (min-width: 1410px){
+  .ducora-slogan{
+    font-size: 5rem;
+  }
+}
+
+@media screen and (min-width: 1536px){
+  .ducora-slogan{
+    font-size: 8rem;
+  }
+}
+
+@media screen and (min-width: 2160px){
+  .ducora-slogan{
+    font-size: 8rem;
+    display: flex;
+    justify-content: center;
+  }
+}
+
+/* Mailchimp next */
